fixing mobile, bar no longer overflows

--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,7 @@ html {
     margin: 0;
     overflow: hidden;
 }
-.navbar-nav ul li{
-    display: inline;
-}
+
 .content p {
     line-height: 30px;
     font-size: 16px;
